<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegisterFirebase">

  <include layout="@layout/toolbar2" />


 <LinearLayout
     android:layout_width="369dp"
     android:layout_height="694dp"
     android:orientation="vertical"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintTop_toTopOf="@+id/linearLayout"
     app:layout_constraintVertical_bias="1.0"
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteX="12dp">

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/imagen_fire"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:layout_gravity="center"
      android:layout_margin="6dp"
      android:src="@drawable/libro7"/>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="6dp"
      android:gravity="center"
      android:orientation="horizontal">

   <Button
       android:id="@+id/btn_photo"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:background="@drawable/custom_button2"
       android:text="photo"
       android:textColor="@color/white"
       android:textSize="14sp" />

   <Button
       android:id="@+id/btn_delete"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:background="@drawable/custom_button2"
       android:text="delete"
       android:textColor="@color/white"
       android:textSize="14sp" />

   <Button
       android:id="@+id/btn_add"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:background="@drawable/custom_button2"
       android:text="@string/add"
       android:textColor="@color/white"
       android:textSize="14sp" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:hint="@string/title_txt"
       android:textColorHint="@color/blue_500"
       app:errorEnabled="true"
       app:startIconDrawable="@drawable/ic_book">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:hint="@string/presio_txt"
       android:textColorHint="@color/blue_500"
       app:errorEnabled="true"
       app:startIconDrawable="@drawable/ic_money">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/precio_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:hint="@string/genero_txt"
       android:textColorHint="@color/blue_500"
       app:errorEnabled="true"
       app:startIconDrawable="@drawable/ic_genero">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/genero_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:hint="@string/año_txt"
       android:textColorHint="@color/blue_500"
       app:errorEnabled="true"
       app:startIconDrawable="@drawable/ic_calendar">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/año_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />
   </com.google.android.material.textfield.TextInputLayout>

   </LinearLayout>


 </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>